test/fail/exceptions/catch_string.lly
#[
SyntaxError: 'String' is not a valid exception class.
    from catch_string.lly:8:
]#

try:
    1 / 0
except String:
    0
